--- a/src/styles.less
+++ b/src/styles.less
@@ -14,6 +14,10 @@
   height: 100%;
 }
 
+.text-center {
+  text-align: center;
+}
+
 .text-right {
   text-align: right;
 }
@@ -45,6 +49,24 @@
 
 .white-bkgd {
   background-color: white;
+}
+
+.vertical-middle {
+  vertical-align: middle;
+}
+
+.list-inline {
+  padding-left: 0;
+  list-style: none;
+  margin-bottom: 0 !important;
+}
+
+.list-inline-item:not(:last-child) {
+  margin-right: 0.5rem;
+}
+
+.list-inline-item {
+  display: inline-block;
 }
 
 .generate-mp(50);
