--- a/src/styles.less
+++ b/src/styles.less
@@ -55,6 +55,12 @@
   vertical-align: middle;
 }
 
+.unstyled-list {
+  padding-left: 0;
+  list-style: none;
+  margin-bottom: 0 !important;
+}
+
 .list-inline {
   padding-left: 0;
   list-style: none;
