--- a/src/styles.less
+++ b/src/styles.less
@@ -51,6 +51,10 @@
   background-color: white;
 }
 
+.grey-bkgd {
+  background-color: #f0f2f5;
+}
+
 .vertical-middle {
   vertical-align: middle;
 }
